# opticks

./: .disable.azure-pipelines.yml  .gitignore  .gitmodules  README.md  SECURITY.md  _config.yml  azure-pipelines.yml  index.md
Code/application/: .gitignore  ArcIntegration.sln  Building Sample PlugIns.txt  CMakeLists.txt  CMakePresets.json  Main.cpp  Opticks.sln  Opticks.vcproj  Opticks.vcxproj  Opticks.vcxproj.filters  SConstruct  SamplePlugIns.sln  striprevs.py
Code/application/ApiDocs/: ApiDocs.vcproj  ApiDocs.vcxproj  ApiDocs.vcxproj.filters  CMakeLists.txt  aeb.html  aeb.txt  aebl.html  application.dox  contextmenus.txt  coordinate_systems.txt  dependencies.txt  deploymentfiles.txt  howto_buildenvironment.txt  howto_buildtutorials.txt  howto_compileplugins.txt  howto_customdraganddrop.txt  howto_importer.txt  howto_sessionsave.txt  howto_tutorial1.txt  howto_tutorial2.txt  howto_tutorial3.txt  howto_tutorial4.txt  howto_tutorial5.txt  howto_writeinstaller.txt  howtos.txt  iceformat.txt  mainpage.txt  overviews.txt  pluginbranding.txt  plugins.txt  plugintutorial1.txt  plugintutorial2.txt  plugintutorial3.txt  plugintutorial4.txt  plugintutorial5.txt  plugintutorial_building.txt  plugintutorial_overview.txt  settings_macros.txt  specialmetadata.txt  stringutilities_types.txt  (+6 more)
Code/application/ArcProxy/: ArcProxy.cpp  ArcProxy.h  ArcProxy.vcproj  ArcProxy.vcxproj  ArcProxy.vcxproj.filters  ArcSDK.h  LicenseUtilities.cpp  LicenseUtilities.h  ProcessStatusChecker.cpp  ProcessStatusChecker.h  SConscript
Code/application/ArcProxyLib/: ArcProxyLib.vcproj  ArcProxyLib.vcxproj  ArcProxyLib.vcxproj.filters  CMakeLists.txt  ConnectionParameters.h  Feature.h  FeatureClassProperties.h  FormatStringProcessor.h
Code/application/Batch/: Batch.vcproj  Batch.vcproj.FILLINUSERNAME.user.template  Batch.vcxproj  Batch.vcxproj.filters  BatchApplication.cpp  BatchApplication.h  CMakeLists.txt  DesktopServicesImp.cpp  DesktopServicesImp.h  Main.cpp  ProgressBriefConsole.cpp  ProgressBriefConsole.h  ProgressConsole.cpp  ProgressConsole.h  SConscript
Code/application/CompileSettings/: .gitgnore  32bitSettings.props  32bitSettings.vsprops  64bitSettings.props  64bitSettings.vsprops  AllCommonSettings-Debug-32bit.props  AllCommonSettings-Debug-32bit.vsprops  AllCommonSettings-Debug-64bit.props  AllCommonSettings-Debug-64bit.vsprops  AllCommonSettings-Debug.props  AllCommonSettings-Debug.vsprops  AllCommonSettings-Release-32bit.vsprops  AllCommonSettings-Release-64bit.props  AllCommonSettings-Release.props  AllCommonSettings-Release.vsprops  AllCommonSettings.props  AllCommonSettings.vsprops  ApplicationCommonSettings-Debug.vsprops  ApplicationCommonSettings-Release.props  ApplicationCommonSettings-Release.vsprops  ApplicationCommonSettings.props  ApplicationCommonSettings.vsprops  ArcGIS.props  ArcGIS.py  ArcGIS.vsprops  ArcProxyLib-Debug.props  ArcProxyLib-Debug.vsprops  ArcProxyLib-Release.props  ArcProxyLib-Release.vsprops  ArcProxyLib.props  ArcProxyLib.py  ArcProxyLib.vsprops  Aspam.py  Aspam.vsprops  Cg.props  Cg.vsprops  DeprecatedPlugInSettings.props  DeprecatedPlugInSettings.vsprops  EnableWarnings.props  HdfPlugInLibrary.props  (+139 more)
Code/application/Desktop/: AnimationModel.cpp  AnimationModel.h  CMakeLists.txt  ContextMenuImp.cpp  ContextMenuImp.h  Desktop.vcproj  Desktop.vcxproj  Desktop.vcxproj.filters  DesktopServicesImp.cpp  DesktopServicesImp.h  DockWindowAdapter.cpp  DockWindowAdapter.h  DockWindowImp.cpp  DockWindowImp.h  ElementModel.cpp  ElementModel.h  FontImp.cpp  FontImp.h  LayerListAdapter.cpp  LayerListAdapter.h  LayerListImp.cpp  LayerListImp.h  MouseModeImp.cpp  MouseModeImp.h  OrthographicViewImp.cpp  OrthographicViewImp.h  PerspectiveViewImp.cpp  PerspectiveViewImp.h  PlugInModel.cpp  PlugInModel.h  PointCloudViewAdapter.cpp  PointCloudViewAdapter.h  PointCloudViewImp.cpp  PointCloudViewImp.h  PointCloudWindowAdapter.cpp  PointCloudWindowAdapter.h  PointCloudWindowImp.cpp  PointCloudWindowImp.h  ProductViewAdapter.cpp  ProductViewAdapter.h  (+37 more)
Code/application/Framework/: Application.cpp  Application.h  ArgumentList.cpp  ArgumentList.h  CMakeLists.txt  CopyrightInformation.cpp  CopyrightInformation.h  Framework.vcproj  Framework.vcxproj  Framework.vcxproj.filters  InteractiveApplication.cpp  InteractiveApplication.h  ModuleManager.cpp  SConscript
Code/application/Gui/: AboutDlg.cpp  AboutDlg.h  AnimationCycleButton.cpp  AnimationCycleButton.h  AnnotationToolBar.cpp  AnnotationToolBar.h  AoiMergeDlg.cpp  AoiMergeDlg.h  AoiToolBar.cpp  AoiToolBar.h  AoiToolBarAdapter.cpp  AoiToolBarAdapter.h  AoiToolBarImp.cpp  AoiToolBarImp.h  ApplicationWindow.cpp  ApplicationWindow.h  BackgroundPluginWindow.cpp  BackgroundPluginWindow.h  BadValuesDlg.cpp  BadValuesDlg.h  BandBadValuesDlg.cpp  BandBadValuesDlg.h  BandBadValuesValidator.cpp  BandBadValuesValidator.h  BatchEditorDlg.cpp  BatchEditorDlg.h  BatchExportDlg.cpp  BatchExportDlg.h  BrightnessToolBar.cpp  BrightnessToolBar.h  CMakeLists.txt  ChippingWidget.cpp  ChippingWidget.h  ChippingWindow.cpp  ChippingWindow.h  ColormapEditor.cpp  ColormapEditor.h  DataDescriptorWidget.cpp  DataDescriptorWidget.h  DisplayToolBar.cpp  (+220 more)
Code/application/HdfPlugInLib/: CMakeLists.txt  Hdf4Attribute.cpp  Hdf4Attribute.h  Hdf4Dataset.cpp  Hdf4Dataset.h  Hdf4Element.cpp  Hdf4Element.h  Hdf4File.cpp  Hdf4File.h  Hdf4Group.cpp  Hdf4Group.h  Hdf4ImporterShell.cpp  Hdf4ImporterShell.h  Hdf4Pager.cpp  Hdf4Pager.h  Hdf4Utilities.cpp  Hdf4Utilities.h  Hdf5Attribute.cpp  Hdf5Attribute.h  Hdf5CustomReader.h  Hdf5CustomWriter.h  Hdf5Data.cpp  Hdf5Data.h  Hdf5Dataset.cpp  Hdf5Dataset.h  Hdf5Element.cpp  Hdf5Element.h  Hdf5File.cpp  Hdf5File.h  Hdf5Group.cpp  Hdf5Group.h  Hdf5ImporterShell.cpp  Hdf5ImporterShell.h  Hdf5IncrementalReader.cpp  Hdf5IncrementalReader.h  Hdf5IncrementalWriter.h  Hdf5Node.cpp  Hdf5Node.h  Hdf5Pager.cpp  Hdf5Pager.h  (+15 more)
Code/application/Installer/: Aeb.cpp  Aeb.h  AebId.cpp  AebId.h  AebIo.cpp  AebIo.h  AebPlatform.cpp  AebPlatform.h  AebRequirement.cpp  AebRequirement.h  AebVersion.cpp  AebVersion.h  CMakeLists.txt  ExtensionListItem.h  (+27 more)
(+3442 files in other folders)
